erDiagram
  USERS ||--o{ CLUB_MEMBERSHIPS : joins
  CLUBS ||--o{ CLUB_MEMBERSHIPS : has
  CLUBS ||--o{ EVENTS : hosts
  USERS ||--o{ EVENTS : creates
  EVENTS ||--o{ ALBUMS : contains
  ALBUMS ||--o{ MEDIA : stores
  EVENTS ||--o{ MEDIA : indexes
  MEDIA ||--o{ MEDIA_TAGS : has
  TAGS ||--o{ MEDIA_TAGS : labels
  MEDIA ||--o{ COMMENTS : receives
  USERS ||--o{ COMMENTS : writes
  MEDIA ||--o{ LIKES : receives
  USERS ||--o{ LIKES : gives
  USERS ||--o{ NOTIFICATIONS : receives
  MEDIA ||--o{ FACE_EMBEDDINGS : detects
  USERS ||--o{ FACE_EMBEDDINGS : matches
  USERS ||--o{ FAVORITE_COLLECTIONS : owns
  FAVORITE_COLLECTIONS ||--o{ FAVORITE_COLLECTION_MEDIA : includes
  MEDIA ||--o{ FAVORITE_COLLECTION_MEDIA : saved_as
  EVENTS ||--o{ EVENT_TIMELINE_ITEMS : narrates
  EVENTS ||--o{ EVENT_ATTENDANCE_HEATMAP : tracks
  USERS ||--o{ AUDIT_LOGS : performs
